src/objects/Order.object
<CustomObject>
    <fields>
        <fullName>Non_SIMPLANT_Items__c</fullName>
        <label>Non-SIMPLANT Items</label>
        <summarizedField>OrderItem.Non_SIMPLANT_Evaluation__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Note_for_canceled_orders__c</fullName>
        <label>Note for canceled orders</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_product_not_from_DS__c</fullName>
        <formula>Total_of_Products_on_this_Order__c - Count_FOC_Products_not_from_dealer__c</formula>
        <label>Number of product not from DS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Code__c</fullName>
        <label>Offer Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Amount_global__c</fullName>
        <formula>(Order_amount_before_disc_globa__c + Order_bundle_amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Discount__c</fullName>
        <description>Discount for the total amount of the order</description>
        <label>Order Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Order_Link__c</fullName>
        <formula>IF( Country__c =&quot;PT&quot;, hyperlink(&quot;/email/author/emailauthor.jsp?retURL=/&quot;&amp;Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;rtype=003&amp;p5=&quot;&amp;$User.Email&amp;&quot;&amp;template_id=00X0J000002PD7b&quot;,&quot;Send Quote&quot; ), hyperlink(&quot;/email/author/emailauthor.jsp?retURL=/&quot;&amp;Id&amp;&quot;&amp;p3_lkid=&quot;&amp;Id&amp;&quot;&amp;rtype=003&amp;p5=&quot;&amp;$User.Email&amp;&quot;&amp;template_id=00X0J000002RY5a&quot;,&quot;Send Quote&quot; ))</formula>
        <label>Order Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Missing_Info__c</fullName>
        <label>Order Missing Info</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VAT Number</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
                <value>
                    <fullName>No products in the order</fullName>
                </value>
                <value>
                    <fullName>Distributor Name</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Owner__c</fullName>
        <description>Formula field displaying Order Owner</description>
        <formula>Owner:User.Full_Name__c</formula>
        <label>Order Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_SBU__c</fullName>
        <formula>Owner:User.User_SBU__c</formula>
        <label>Order SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <description>To track the origin of the order</description>
        <label>Order Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Visit</fullName>
                </value>
                <value>
                    <fullName>Call from customer</fullName>
                </value>
                <value>
                    <fullName>Email from customer</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Order to Dealer&apos;s Rep</fullName>
                </value>
                <value>
                    <fullName>Webshop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Tracking__c</fullName>
        <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=0150J0000045MNP&quot;, &quot;Connect to the VPN before tracking&quot;,25, 200)&amp;&quot;  |  &quot;
&amp;HYPERLINK(&quot;https://www.centiro.com/c3web&quot; , &quot;Click to Track US6 Regen Orders&quot;)&amp;&quot;|   &quot;&amp;Hyperlink(&quot;http://c3web.astratech.net/&quot;, &quot;Click to Track All Other Orders&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>US6 Login Info: Username: track.US6@us.dentsply.com, Password: Trackcentiro1! 
All Other Login Info: Username: track@us.dentsply.com, Password: centiro</inlineHelpText>
        <label>Order Tracking</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <description>Order Type for DNA</description>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Goods Order</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Discount on Demand</fullName>
                </value>
                <value>
                    <fullName>PREP</fullName>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Type_formula__c</fullName>
        <formula>if( and( Country__c=&quot;US&quot;,  Free_of_Charge_Order__c =True),&quot;Free Goods Order&quot;,   text(Order_Type__c) )</formula>
        <label>Order Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_amount_before_disc_globa__c</fullName>
        <description>Value of the order with discount</description>
        <label>Order Amount before total discount</label>
        <summarizedField>OrderItem.Total_Line_Item_Price__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_amount_number__c</fullName>
        <formula>TotalAmount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order amount (number)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_amount_without_discounts__c</fullName>
        <formula>TotalAmount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order amount without discounts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_bundle_amount__c</fullName>
        <label>Order bundle amount</label>
        <summarizedField>Order_bundle__c.Total_price__c</summarizedField>
        <summaryForeignKey>Order_bundle__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_quote_end_date__c</fullName>
        <label>Order quote valid until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_subtype__c</fullName>
        <label>Order subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Order_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telesales</fullName>
                </value>
                <value>
                    <fullName>Austenal</fullName>
                </value>
                <value>
                    <fullName>Ceramco</fullName>
                </value>
                <value>
                    <fullName>Institutional</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Prosthetics</fullName>
                </value>
                <value>
                    <fullName>Austenal &amp; Trubyte</fullName>
                </value>
                <value>
                    <fullName>Offers</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orders_Related_to_CFE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orders Related to CFE</label>
        <referenceTo>Orders_Related_to_CFE__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoice_Age__c</fullName>
        <formula>Account.Credit_Limit_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Invoice Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Overdue_Invoice_Amount_at_this_Account__c</fullName>
        <formula>Account.Outstanding_Invoice_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue Invoice Amount at this Account</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDFButlerAlternativeName__c</fullName>
        <formula>Pricebook2.PDF_Butler_Template__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Butler Alternative Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDFButlerDraft__c</fullName>
        <formula>if(TEXT(Status)=&apos;Activated&apos;, &apos;&apos; , &apos;-Draft&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Butler Draft</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDFButlerLocale__c</fullName>
        <formula>TEXT($User.LocaleSidKey)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Butler Locale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDFButlerSendEmailView__c</fullName>
        <formula>! ISBLANK(Contact__c) &amp;&amp; Contact__r.Email != &apos;&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PDF Butler Send Email View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPN10__c</fullName>
        <formula>(Order_Amount_global__c / 1.11 ) * 0.11</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPN 11%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Period__c</fullName>
        <description>Indonesia has the legal requirement to indicate on each order sent out, which payment terms (time-wise in a sense of &quot;When is the order amount being settled by the customer?) the customer is choosing</description>
        <label>Payment Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TOP14</fullName>
                </value>
                <value>
                    <fullName>TOP30</fullName>
                </value>
                <value>
                    <fullName>Transfer prior to delivery</fullName>
                </value>
                <value>
                    <fullName>Cash on Delivery </fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_terms_months__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Payment terms (months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <inlineHelpText>Please choose the payment type by which the customer would like to pay</inlineHelpText>
        <label>Payment type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DS credit card</fullName>
                </value>
                <value>
                    <fullName>Credit card</fullName>
                </value>
                <value>
                    <fullName>Bank transfer</fullName>
                </value>
                <value>
                    <fullName>Promissory note</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_type_discount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payment type discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pricebook_Name__c</fullName>
        <formula>Pricebook2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricebook Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessStatus__c</fullName>
        <label>Process Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Order_Creator__c</fullName>
        <formula>CreatedBy.Profile__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile Order Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Team_Approval_Required__c</fullName>
        <formula>IF( OR( Prospect_at_the_point_of_order_entry__c=TRUE, Account_Record_Type__c  = &quot;Clinical PROSPECT&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Team Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Team_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by workflow/approval process</description>
        <label>Project Team Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Team_Date_Time_Completed__c</fullName>
        <label>Project Team Date/Time Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Project_Team_Date_Time_Received__c</fullName>
        <label>Project Team Date/Time Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Prospect_at_the_point_of_order_entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated by a workflow at the point of order entry - evaluates the record type of the original account to determine processing by the customer service team</description>
        <label>Prospect at the point of order entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <description>Field to set the status of the quote</description>
        <label>Quote Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Emailed to Customer</fullName>
                </value>
                <value>
                    <fullName>Confirmed by Customer</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>No Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Manager_Approval_Required__c</fullName>
        <formula>IF(
OR(
AND( Discount_Approval_Needed__c  &gt; 0,  Non_SIMPLANT_Items__c&gt;=1,  SIMPLANT_Included__c &gt;=0), 
AND( Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c&gt;=0,  SIMPLANT_Included__c &gt;0,  Waive_Shipping_Charges__c =TRUE),
AND( Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c&gt;=0,  SIMPLANT_Included__c &gt;0),
AND(Non_SIMPLANT_Items__c &gt;0, Waive_Shipping_Charges__c =TRUE),
AND( SIMPLANT_Included__c &gt;=0, Non_SIMPLANT_Items__c &gt;=1,Waive_Shipping_Charges__c =TRUE)),
 TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Manager Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Regional Manager Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Manager_E_mail__c</fullName>
        <label>Regional Manager E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the order is contracted.</description>
        <inlineHelpText>Indicates if the order is contracted.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ContractingMethod</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__OrderBookings__c</fullName>
        <description>Total amount of all order product bookings.</description>
        <inlineHelpText>Total amount of all order product bookings.</inlineHelpText>
        <label>Order Bookings</label>
        <summarizedField>OrderItem.SBQQ__OrderProductBookings__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__PaymentTerm__c</fullName>
        <description>The payment term for this order.</description>
        <inlineHelpText>The payment term for this order.</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__PaymentTerm</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatusMessage__c</fullName>
        <description>The price calculation status message.</description>
        <inlineHelpText>The price calculation status message</inlineHelpText>
        <label>Price Calculation Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__PriceCalcStatus__c</fullName>
        <description>The order price calculation  job status.  It is set by the system.</description>
        <inlineHelpText>Indicates the order price calculation job status.  It is set by the system.</inlineHelpText>
        <label>Price Calculation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__JobStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The quote where the order is created from.</description>
        <inlineHelpText>The quote where the order is created from.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalTerm__c</fullName>
        <description>Specify the term of the renewal. By default, it matches the original contract term.</description>
        <inlineHelpText>Specify the term of the renewal. By default, it matches the original contract term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewalUpliftRate__c</fullName>
        <description>Rate of renewal price increases.</description>
        <inlineHelpText>Rate of renewal price increases.</inlineHelpText>
        <label>Renewal Uplift (%)</label>
        <precision>11</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__TaxAmount__c</fullName>
        <description>The estimated tax amount</description>
        <inlineHelpText>The estimated tax amount</inlineHelpText>
        <label>Estimated Tax</label>
        <summarizedField>OrderItem.SBQQ__TaxAmount__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_CS_Approval_Required__c</fullName>
        <formula>if(SIMPLANT_Software_Evaluation__c  &lt;&gt; 0,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIMPLANT CS Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Customer_Service_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SIMPLANT Customer Service Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Director_Approval__c</fullName>
        <formula>IF(OR
(AND
(SIMPLANT_Included__c &gt;0,  Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c =0,  Waive_Shipping_Charges__c =TRUE),
AND( SIMPLANT_Included__c &gt;0,  Discount_Approval_Needed__c &gt;0,  Non_SIMPLANT_Items__c =0)), TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIMPLANT Director Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Director_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Populated by workflow/approvals</description>
        <label>SIMPLANT Director Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Included__c</fullName>
        <label>SIMPLANT Included</label>
        <summarizedField>OrderItem.SIMPLANT_Line_Item__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SIMPLANT_Software_Evaluation__c</fullName>
        <label>SIMPLANT Software Evaluation</label>
        <summarizedField>OrderItem.SIMPLANT_Software_Line_Item__c</summarizedField>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SalesLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TFUS-000003080</description>
        <label>Sales Lead</label>
        <referenceTo>Field_Sales_Project_Members__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesOrigin__c</fullName>
        <label>Sales Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Address__c</fullName>
        <formula>if(  Ship_to_Sales_Rep__c =False,&quot;&quot;,

if(isblank(Account_for_Sample_in_AX__c),&quot;&quot;,
if(isblank(Account_for_Sample_in_AX__r.ShippingStreet),&quot;&quot;, Account_for_Sample_in_AX__r.ShippingStreet) &amp; if(isblank(Account_for_Sample_in_AX__r.ShippingPostalCode),&quot;&quot;, &quot; , &quot; &amp; Account_for_Sample_in_AX__r.ShippingPostalCode)&amp;
if (isblank(Account_for_Sample_in_AX__r.ShippingCity),&quot;&quot;, &quot; , &quot; &amp;  Account_for_Sample_in_AX__r.ShippingCity)&amp;
if(isblank( Account_for_Sample_in_AX__r.ShippingState),&quot;&quot;, &quot; , &quot; &amp;  Account_for_Sample_in_AX__r.ShippingState)&amp;
if(isblank(Account_for_Sample_in_AX__r.ShippingCountry),&quot;&quot;, &quot; , &quot;  &amp; Account_for_Sample_in_AX__r.ShippingCountry)))</formula>
        <label>Sales Rep Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Order__c</fullName>
        <formula>if(  isblank(Account_for_Sample_in_AX__c ),False,True)</formula>
        <label>Sample Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondLevelApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Defaulted to your manager&apos;s manager</inlineHelpText>
        <label>Second Level Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Distributor_Email__c</fullName>
        <inlineHelpText>Please specify another email for the distributor in case of need</inlineHelpText>
        <label>Secondary Distributor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Send_order_manually__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for US to control that a distributor order is not sent to dealer via EDI</description>
        <label>Not to send order to EDI automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_Method__c</fullName>
        <description>Picklist field (required) only on the Prosthetics Direct Orders (USC - US)</description>
        <label>Ship Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COD</fullName>
                </value>
                <value>
                    <fullName>FedEx - Ground</fullName>
                </value>
                <value>
                    <fullName>FedEx – 1 Day</fullName>
                </value>
                <value>
                    <fullName>FedEx – 2 Day</fullName>
                </value>
                <value>
                    <fullName>UPS - Ground</fullName>
                </value>
                <value>
                    <fullName>UPS – 2 Day</fullName>
                </value>
                <value>
                    <fullName>UPS – 3 Day</fullName>
                </value>
                <value>
                    <fullName>UPS – Overnight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_from__c</fullName>
        <label>Ship from</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Dentsply</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_to_Sales_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship to Sales Rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Shipping_Charges__c</fullName>
        <inlineHelpText>If Discounted Shipping -Please indicate the Discount in  Discounted Shipping Type.</inlineHelpText>
        <label>Shipping Charges</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill Customer for Shipping</fullName>
                    <default>true</default>
                    <label>Bill Customer for Shipping</label>
                </value>
                <value>
                    <fullName>Waive Shipping</fullName>
                </value>
                <value>
                    <fullName>Discounted Shipping</fullName>
                </value>
                <value>
                    <fullName>SIMPLANT Software Only - No Shipping Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>User_CountryPL__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>UFJ: F IntnlPriority: FedEx Intnl Priority Warehouse</fullName>
                </value>
                <value>
                    <fullName>FedEx 2nd Day PM - UFE $14.50</fullName>
                </value>
                <value>
                    <fullName>FedEx 3rd Day PM: UFF $13</fullName>
                </value>
                <value>
                    <fullName>FedEx Next Day 10:30am - UFB $27.00</fullName>
                </value>
                <value>
                    <fullName>FedEx Next Day end of day - UFC $20.50</fullName>
                </value>
                <value>
                    <fullName>FedEx Next Day Early AM - 6-8:30am - UFA $49.50</fullName>
                </value>
                <value>
                    <fullName>FedEx Saturday 10:30am - UFH $49.50</fullName>
                </value>
                <value>
                    <fullName>UPS 2nd Day PM - UXE $14.50</fullName>
                    <default>true</default>
                    <label>UPS 2nd Day PM - UXE $14.50</label>
                </value>
                <value>
                    <fullName>UPS 2nd Day AM - UXD-$16.50</fullName>
                </value>
                <value>
                    <fullName>UPS Next Day 10:30am - UXB $27.00</fullName>
                </value>
                <value>
                    <fullName>UPS Next Day end of day - UXC $20.50</fullName>
                </value>
                <value>
                    <fullName>UPS Ground - UXG $8.50</fullName>
                </value>
                <value>
                    <fullName>UPS Saturday 10:30am - UXH $49.50</fullName>
                </value>
                <value>
                    <fullName>SIMPLANT- No Shipping</fullName>
                </value>
                <value>
                    <fullName>UPS COD Next Day 10:30 AM: UX2</fullName>
                </value>
                <value>
                    <fullName>UPS COD Next Day PM: UX3</fullName>
                </value>
                <value>
                    <fullName>UPS COD 2nd Day PM:  UX5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceRecord__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>#1674</description>
        <label>Source Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Source_Record__c.CIM_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Source_Record__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpecialRequests__c</fullName>
        <label>Special Requests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is checked only when the approval process has been enabled. This is to create a validation rule, such that only the approval process can change the Status</description>
        <label>Submitted for Approval</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>